<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="base">Base</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="bill_amount">Bill amount</string>
    <string name="people">People</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="lace_of_title">lace of title</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="decimal_place">Decimal place</string>
    <string name="average">Average</string>
    <string name="xx">XX</string>
    <string name="tip_percent">Tip(%)</string>
    <string name="lace_for_title">Lace for title</string>
</resources>