<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Views on the left side  -->

    <!-- Views on the right side -->

    <TextView
        android:id="@+id/tvTipPercentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/seekBarTip"
        app:layout_constraintStart_toStartOf="@+id/seekBarTip"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTip"
        tools:text="24%" />

    <TextView
        android:id="@+id/tvDecimalPlace0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="45dp"
        android:text="@string/_0"
        android:textColor="#E4633B"
        app:layout_constraintBottom_toTopOf="@+id/tvTipAmount"
        app:layout_constraintStart_toEndOf="@+id/tvDecimalPlace"
        app:layout_constraintStart_toStartOf="@+id/seekBarDecimalPlace"
        app:layout_constraintTop_toBottomOf="@+id/seekBarDecimalPlace"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvDecimalPlace1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="45dp"
        android:text="@string/_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#E4633B"
        app:layout_constraintBottom_toTopOf="@+id/tvTipAmount"
        app:layout_constraintStart_toStartOf="@+id/seekBarDecimalPlace"
        app:layout_constraintTop_toBottomOf="@+id/seekBarDecimalPlace"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvDecimalPlace2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="45dp"
        android:text="@string/_2"
        android:textColor="#E4633B"
        app:layout_constraintBottom_toTopOf="@+id/tvTipAmount"
        app:layout_constraintStart_toStartOf="@+id/seekBarDecimalPlace"
        app:layout_constraintTop_toBottomOf="@+id/seekBarDecimalPlace"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvPeopleAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/xx"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#43A047"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/seekBarPeople"
        app:layout_constraintStart_toStartOf="@+id/seekBarPeople"
        app:layout_constraintTop_toBottomOf="@+id/seekBarPeople" />

    <SeekBar
        android:id="@+id/seekBarDecimalPlace"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:max="2"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="@+id/tvDecimalPlace"
        app:layout_constraintStart_toEndOf="@+id/tvDecimalPlace"
        app:layout_constraintTop_toTopOf="@+id/tvDecimalPlace" />

    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="191dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:ems="8"
        android:hint="@string/bill_amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBaseLabel"
        app:layout_constraintStart_toEndOf="@id/tvBaseLabel"
        app:layout_constraintTop_toTopOf="@+id/tvBaseLabel"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/tipDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/seekBarTip"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTip"
        tools:text="Acceptable" />

    <TextView
        android:id="@+id/tvTipPercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tip_percent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvPeopleLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvBaseLabel" />

    <SeekBar
        android:id="@+id/seekBarTip"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipPercentLabel"
        app:layout_constraintStart_toEndOf="@+id/tvTipPercentLabel"
        app:layout_constraintTop_toTopOf="@+id/tvTipPercentLabel"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/tvBaseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/base"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvPeopleLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvPeopleLabel" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipLabel"
        app:layout_constraintStart_toEndOf="@+id/tvTipLabel"
        app:layout_constraintTop_toTopOf="@+id/tvTipLabel"
        tools:ignore="TextSizeCheck"
        tools:text="24" />

    <TextView
        android:id="@+id/tvPeopleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"
        android:text="@string/people"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#43A047"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#E91E63"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTipLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTipLabel" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="80dp"
        android:text="@string/tip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvDecimalPlace"
        app:layout_constraintTop_toBottomOf="@+id/tvDecimalPlace" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalLabel"
        app:layout_constraintStart_toEndOf="@+id/tvTotalLabel"
        app:layout_constraintTop_toTopOf="@+id/tvTotalLabel"
        app:layout_constraintVertical_bias="0.166"
        tools:text="124" />

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-black"
        android:text="Made by kebwlmbhee"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/tip_calculator"
        android:textColor="#D84315"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap" />

    <SeekBar
        android:id="@+id/seekBarPeople"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:max="11"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="@+id/tvPeopleLabel"
        app:layout_constraintStart_toEndOf="@+id/tvPeopleLabel"
        app:layout_constraintTop_toTopOf="@+id/tvPeopleLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvDecimalPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/decimal_place"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#EF5E31"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPercentLabel" />

    <TextView
        android:id="@+id/tvAverageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/average"
        android:textColor="#E91E63"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTipLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalLabel" />

    <TextView
        android:id="@+id/tvAverageAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvAverageLabel"
        app:layout_constraintStart_toStartOf="@+id/tvTipAmount"
        app:layout_constraintTop_toTopOf="@+id/tvAverageLabel"
        tools:text="62" />

    <ImageView
        android:id="@+id/ivLace"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:contentDescription="@string/lace_for_title"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        app:srcCompat="@drawable/lace_night" />

</androidx.constraintlayout.widget.ConstraintLayout>